--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,9 +1,9 @@
-db.driver=com.mysql.jdbc.Driver
-db.user=root
-db.password=Z7YW87X33
-db.poolsize=32
-db.url=jdbc:mysql://localhost:3306/epam_test
-db.autoReconnect=true
-db.useSSL=false
-db.useUnicode=true
-db.encoding=UTF-8
+driver=com.mysql.jdbc.Driver
+user=root
+password=Z7YW87X33
+poolsize=32
+url=jdbc:mysql://localhost:3306/epam_test
+autoReconnect=true
+useSSL=false
+useUnicode=true
+characterEncoding=UTF-8
