--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -2,7 +2,7 @@ driver=com.mysql.jdbc.Driver
 user=root
 password=Z7YW87X33
 poolsize=32
-url=jdbc:mysql://localhost:3306/epam_test
+url=jdbc:mysql://localhost:3306/db
 autoReconnect=true
 useSSL=false
 useUnicode=true
