--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <error-page>
-        <error-code>500</error-code>
+        <exception-type>java.lang.Throwable</exception-type>
         <location>/pages/error.jsp</location>
     </error-page>
 
