--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
         </plugins>
     </build>
 
-
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
@@ -65,6 +64,12 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
         </dependency>
     </dependencies>
 </project>
